--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "bunx prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
+    "next": "14.2.7",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "typescript": "^5.5.4",
+    "@types/node": "^22.5.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
