--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@tailwindcss/forms": "^0.5.9",
     "next": "14.2.7",
     "prisma": "^5.19.0",
     "react": "^18",
